# kamige-

./: .editorconfig  CMakeLists.txt  Project1.sln  README.md
Project1/: Project1.vcxproj  ソース.cpp
src/: Game.cc  Game.hpp  main.cc
src/Entities/: Entity.hpp
src/Rendering/: Renderer.cc  Renderer.hpp
src/World/: BlockData.hpp  Chunk.cc  Chunk.hpp  World.cc  World.hpp  WorldGenerator.cc  WorldGenerator.hpp
test/: GameTest.cc
